[gd_scene load_steps=6 format=3 uid="uid://3ikl7ryb3a36"]

[ext_resource type="Script" uid="uid://b0v6hvmikp60t" path="res://battle.gd" id="1_8lvy3"]
[ext_resource type="PackedScene" uid="uid://dupeim4n8n1au" path="res://scenes/player/tank.tscn" id="1_n51mc"]
[ext_resource type="PackedScene" uid="uid://c27cywm3ysmjc" path="res://scenes/enemies/enemy.tscn" id="2_i431l"]
[ext_resource type="PackedScene" uid="uid://d0wg2j6y5d4x1" path="res://hud.tscn" id="5_ei00m"]

[sub_resource type="Curve2D" id="Curve2D_7sfm4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -64, -64, 0, 0, 0, 0, 1984, -64, 0, 0, 0, 0, 1984, 1152, 0, 0, 0, 0, -64, 1152, 0, 0, 0, 0, -64, -64)
}
point_count = 5

[node name="Example" type="Node2D"]
script = ExtResource("1_8lvy3")
basic_enemy_scene = ExtResource("2_i431l")

[node name="BackgroundColor" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Tank" parent="." instance=ExtResource("1_n51mc")]
position = Vector2(960, 540)
rotation = -1.5708

[node name="HUD" parent="." instance=ExtResource("5_ei00m")]

[node name="EnemySpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_7sfm4")

[node name="EnemySpawnPathFollow" type="PathFollow2D" parent="EnemySpawnPath"]
position = Vector2(-64, -64)

[node name="EnemySpawnTimer" type="Timer" parent="EnemySpawnPath"]
wait_time = 1.5
autostart = true

[node name="EnemySpawnRampupTimer" type="Timer" parent="EnemySpawnPath"]
wait_time = 10.0
autostart = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-128, -128)

[connection signal="hit" from="Tank" to="." method="_on_tank_hit"]
[connection signal="timeout" from="EnemySpawnPath/EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="EnemySpawnPath/EnemySpawnRampupTimer" to="." method="_on_enemy_spawn_rampup_timer_timeout"]
